--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title>js13kGames Resources</title>
 	<meta name="description" content="This is a list of useful links, resources and tutorials for creating a js13kGames entry." />
-	<meta property="og:image" content="http://js13kgames.com/img/logo.png" />
+	<meta property="og:image" content="https://js13kgames.com/img/logo.png" />
 	<link rel="shortcut icon" href="favicon.png">
 	<link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Graduate" rel="stylesheet">
@@ -12,15 +12,15 @@
 <body>
 <header>
 	<nav>
-		<a href="http://js13kgames.com">js13kGames</a>
+		<a href="https://js13kgames.com">js13kGames</a>
 		<ul>
-			<li><a href="http://2018.js13kgames.com">2018</a></li>
-			<li><a href="http://2017.js13kgames.com">2017</a></li>
-			<li><a href="http://2016.js13kgames.com">2016</a></li>
-			<li><a href="http://2015.js13kgames.com">2015</a></li>
-			<li><a href="http://2014.js13kgames.com">2014</a></li>
-			<li><a href="http://2013.js13kgames.com">2013</a></li>
-			<li><a href="http://2012.js13kgames.com">2012</a></li>
+			<li><a href="https://2018.js13kgames.com">2018</a></li>
+			<li><a href="https://2017.js13kgames.com">2017</a></li>
+			<li><a href="https://2016.js13kgames.com">2016</a></li>
+			<li><a href="https://2015.js13kgames.com">2015</a></li>
+			<li><a href="https://2014.js13kgames.com">2014</a></li>
+			<li><a href="https://2013.js13kgames.com">2013</a></li>
+			<li><a href="https://2012.js13kgames.com">2012</a></li>
 		</ul>
 	</nav>
 </header>
@@ -235,7 +235,7 @@
 <footer>
 	<div>
 		&copy; js13kGames 2012-2018
-		<p>Created and maintained by <a target="_blank" href="http://end3r.com">Andrzej Mazur</a> from <a target="_blank" href="http://enclavegames.com">Enclave Games</a>.</p>
+		<p>Created and maintained by <a target="_blank" href="https://end3r.com">Andrzej Mazur</a> from <a target="_blank" href="https://enclavegames.com">Enclave Games</a>.</p>
 	</div>
 </footer>
 
