--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
 		<li><a href="http://xem.github.io/articles/#css3d">How to make games with CSS3D</a></li>
 		<li><a href="https://aframe.io/aframe-school/">A-Frame School</a></li>
 		<li><a href="https://medium.com/web-maker/making-asteroids-with-kontra-js-and-web-maker-95559d39b45f">Making Asteroids with Kontra.js and Web Maker</a> - handy tutorial from Steven Lambert, the author of Kontra.js</li>
+		<li><a href="https://craiky.github.io/tutorial/">Procedurally Generated Dungeon Tutorial</a></li>
 	</ul>
 
 	<h3 id="vids">Videos and audio</h3>
