xem's tools and writeup

--- a/index.html
+++ b/index.html
@@ -89,8 +89,13 @@
 		<li><a href="http://www.piskelapp.com/">Piskel</a> - Pixel Art and Animated Sprites</li>
 		<li><a href="http://www.aseprite.org/">aseprite</a> - animated sprite editor &amp; pixel art tool</li>
 		<li><a href="http://pyxeledit.com">Pyxel Edit</a> - is a pixel art editor designed to make it fun and easy to make tilesets, levels and animations</li>
-        <li><a href="https://xem.github.io/miniPixelFont/">mini pixel font</a> - Generate your pixel-art font with a few lines of JS</li>
-        <li><a href="https://github.com/madmarcel/js13k-mini-svg-editor">js13k mini-svg editor</a> - Create mini-svg graphics for your js13k game using a webbased editor</li>
+                <li><a href="https://xem.github.io/miniPixelFont/">mini pixel font</a> - Generate your pixel-art font with a few lines of JS</li>
+                <li><a href="https://github.com/madmarcel/js13k-mini-svg-editor">js13k mini-svg editor</a> - Create mini-svg graphics for your js13k game using a webbased editor</li>
+		<li><a href="https://github.com/xem/js13k-path">js13k-path</a> - draw polygons where every point is encoded on 1 ASCII char
+		<li><a href="https://xem.github.io/miniPixelArt/">MiniPixelArt</a> - a 8-color pixel-art editor and exporter (pure JS, no PNG)
+		<li><a href="https://github.com/xem/twemoji-webfont">Twemoji-webfont</a> - helps you live-load an Emoji webfont for any browser, after asking the user if he/she's okay
+		<li><a href="https://codepen.io/xem/pen/OoXpmM?editors=1000">SVGenerator</a> - a dynamic SVG generator with custom colors
+		<li><a href="https://xem.github.io/CSS3D/">CSS3D</a> - The shortest way to write CSS3D cubes, pyramids and sprites (<a href="https://github.com/xem/CSS3D/blob/gh-pages/index.html">source code</a>)
 	</ul>
 
 	<h3 id="mini">Minification</h3>
@@ -107,14 +112,17 @@
 		<li><a href="http://www.minifier.org/">Minify</a> - a JavaScript and CSS minifier</li>
 		<li><a href="https://jscompress.com/">JSCompress</a> - a compression tool for javascript</li>
 		<li><a href="https://github.com/codegolf/zpng">ZPNG Minifier</a> - in-browser jsExe</li>
+		<li><a href="https://xem.github.io/int2binary2html/">int2binary2html</a> - helps you to encode a long list of integers (0-255) in binary and embed it in your index.html
+		
 	</ul>
 
-	<h3 id="aframe">A-Frame resources</h3>
+	<h3 id="aframe">WebXR resources</h3>
 	<ul>
 		<li><a href="https://aframe.io/docs/0.6.0/introduction/#getting-started">A-Frame Documentation</a> - introduciton to A-Frame</li>
 		<li><a href="https://aframevr-slack.herokuapp.com/">A-Frame Slack invitation</a> - ask questions here</li>
 		<li><a href="https://aframe.io/aframe-registry/">A-Frame Registry</a> - useful components</li>
 		<li><a href="https://github.com/aframevr/awesome-aframe">Awesome A-Frame</a> - many more A-Frame resources &amp; examples</li>
+		<li><a href="https://github.com/xem/gyro">Gyro.js</a> - harmonizes the gyroscope/accelerometer output across all mobile devices
 	</ul>
 
 	<h3 id="other">Other tools</h3>
@@ -262,6 +270,7 @@
 				<li><a href="https://engineering.wingify.com/posts/js13k-game-development/#sum-it-up">Sum It Up</a> by Hemkaran Raghav</li>
 				<li><a href="https://engineering.wingify.com/posts/js13k-game-development/#up--down">Up &amp; Down</a> by Dinkar Pundir</li>
 				<li><a href="https://engineering.wingify.com/posts/js13k-game-development/#robo-galactic-shooter">Robo Galactic Shooter</a> by Ashish Bardhan</li>
+				<li><a href="http://xem.github.io/articles/#js13k18">Geoquiz2 / Envelope / Man on Wire by xem & friends
 			</ul>
 		</li>
 		<li><a href="https://blog.github.com/2018-10-05-js13kgames-highlights-2018/">13 Games in ≤ 13kB of JavaScript</a> - GitHub's highlights by Lee Reilly</li>
