--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 	        <li><a href="https://github.com/kutuluk/js13k-ecs">js13k-ecs</a> - a 1kb entity component system, designed for js13k</li>
 	        <li><a href="https://github.com/kutuluk/js13k-2d">js13k-2d</a> - a &lt;2kb 2D WebGL renderer, designed for js13k</li>
 		<li><a href="https://github.com/lpagg/floppy">floppy</a> - a micro game engine for beginners</li>
+		<li><a href="https://github.com/xem/CSS3Dframework">CSS3Dframework</a> - a hackable 1.5kb framework to display and animate CSS3D shapes</li>
 	</ul>
 
 	<h3 id="sfx">Sound and music</h3>
