--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
 		<li><a href="https://codepen.io/xem/pen/OoXpmM?editors=1000">SVGenerator</a> - a dynamic SVG generator with custom colors</li>
 		<li><a href="https://xem.github.io/CSS3D/">CSS3D</a> - The shortest way to write CSS3D cubes, pyramids and sprites (<a href="https://github.com/xem/CSS3D/blob/gh-pages/index.html">source code</a>)</li>
 		<li><a href="http://canvas-txt.geongeorge.com/">Canvas-Txt</a> - The better way to print multiline text on HTML5 canvas with auto line breaks and alignments (<a href="https://github.com/geongeorge/Canvas-Txt">source code</a>)</li>
+		<li><a href="https://spritestack.io/">SpriteStack</a> - SpriteStack is a voxel editor suited for 2D artists featuring hand crafted retro renderer with animation support. It exports spritesheets, slices and vox models.</li>
 	</ul>
 
 	<h3 id="mini">Minification</h3>
