--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
 		<li><a href="https://jscompress.com/">JSCompress</a> - a compression tool for javascript</li>
 		<li><a href="https://github.com/codegolf/zpng">ZPNG Minifier</a> - in-browser jsExe</li>
 		<li><a href="https://xem.github.io/int2binary2html/">int2binary2html</a> - helps you to encode a long list of integers (0-255) in binary and embed it in your index.html</li>
+		<li><a href="https://xem.github.io/terser-online/">Terser-online</a> - a live version of thhe Terser ES6+ minifier, with extra compression options because every byte counts</li>
 	</ul>
 
 	<h3 id="aframe">WebXR resources</h3>
