--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 		<li><a href="https://github.com/lpagg/floppy">floppy</a> - a micro game engine for beginners</li>
 		<li><a href="https://github.com/xem/CSS3Dframework">CSS3Dframework</a> - a hackable ~1.7kb framework to display and animate CSS3D shapes</li>
 		<li><a href="https://twitter.com/MaximeEuziere/status/1157563570823081984">MiniDragAndDrop</a> - a DOM-based, easy-to-use drag&drop library for desktop and mobile browsers (639 bytes)</li>
-
+		<li><a href="https://github.com/xem/mini2Dphysics/">MiniD2Dohysics</a> - a 1.5kb 2D physics engine. Just set the gravity, create Circles and Rectangles, and watch them fall and collide. (see index.html)</li>
 	</ul>
 
 	<h3 id="sfx">Sound and music</h3>
