--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<nav>
 		<a href="https://js13kgames.com">js13kGames</a>
 		<ul>
+			<li><a href="https://2019.js13kgames.com">2019</a></li>
 			<li><a href="https://2018.js13kgames.com">2018</a></li>
 			<li><a href="https://2017.js13kgames.com">2017</a></li>
 			<li><a href="https://2016.js13kgames.com">2016</a></li>
@@ -35,7 +36,6 @@
 
 	<h3 id="engine">Micro game engines and boilerplates</h3>
 	<ul>
-		<li><a href="https://jabo-bernardo.github.io/jabo-micro-game-engine/">Jabo Micro Game Engine</a> - Lightweight and Beginner Friendly Micro Game Engine</li>
 		<li><a href="https://github.com/OttoRobba/ox">ox</a> - tiny 2D game framework for the web</li>
 		<li><a href="https://github.com/Gozala/selfish">Selfish</a> - class-free, pure prototypal inheritance</li>
 		<li><a href="https://github.com/michalbe/mibbu">Mibbu</a> - Javascript game microframework</li>
@@ -65,6 +65,7 @@
 		<li><a href="https://github.com/xem/CSS3Dframework">CSS3Dframework</a> - a hackable ~1.7kb framework to display and animate CSS3D shapes</li>
 		<li><a href="https://twitter.com/MaximeEuziere/status/1157563570823081984">MiniDragAndDrop</a> - a DOM-based, easy-to-use drag&drop library for desktop and mobile browsers (639 bytes)</li>
 		<li><a href="https://github.com/xem/mini2Dphysics/">Mini2Dphysics</a> - a 1.5kb 2D physics engine. Just set the gravity, create Circles and Rectangles, and watch them fall and collide. (see index.html)</li>
+		<li><a href="https://jabo-bernardo.github.io/jabo-micro-game-engine/">Jabo Micro Game Engine</a> - lightweight and beginner friendly micro game engine</li>
 	</ul>
 
 	<h3 id="sfx">Sound and music</h3>
@@ -120,7 +121,7 @@
 		<li><a href="https://jscompress.com/">JSCompress</a> - a compression tool for javascript</li>
 		<li><a href="https://github.com/codegolf/zpng">ZPNG Minifier</a> - in-browser jsExe</li>
 		<li><a href="https://xem.github.io/int2binary2html/">int2binary2html</a> - helps you to encode a long list of integers (0-255) in binary and embed it in your index.html</li>
-		<li><a href="https://xem.github.io/terser-online/">Terser-online</a> - a live version of thhe Terser ES6+ minifier, with extra compression options because every byte counts</li>
+		<li><a href="https://xem.github.io/terser-online/">Terser-online</a> - a live version of the Terser ES6+ minifier, with extra compression options because every byte counts</li>
 	</ul>
 
 	<h3 id="aframe">WebXR resources</h3>
