--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
 		<li><a href="https://github.com/kevincennis/TinyMusic">TinyMusic</a> - simple, lightweight music synth/sequencer in JavaScript using the Web Audio API</li>
 		<li><a href="https://github.com/xem/miniMusic">miniMusic</a> - draw a melody with your mouse, choose the tempo, volume and base note, then export it as a super short JS code</li>
 		<li><a href="https://www.google.com/logos/2017/fischinger/fischinger17.html">Google Music Creator</a> - a simple music creator by Google</li>
+		<li><a href="https://github.com/KilledByAPixel/ZzFX">ZzFX</a> - Zuper Zmall Zeeded Zound Zynth</li>
 	</ul>
 
 	<h3 id="gfx">Artwork and fonts</h3>
