--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 		<li><a href="https://twitter.com/MaximeEuziere/status/1157563570823081984">MiniDragAndDrop</a> - a DOM-based, easy-to-use drag&drop library for desktop and mobile browsers (639 bytes)</li>
 		<li><a href="https://github.com/xem/mini2Dphysics/">Mini2Dphysics</a> - a 1.5kb 2D physics engine. Just set the gravity, create Circles and Rectangles, and watch them fall and collide. (see index.html)</li>
 		<li><a href="https://jabo-bernardo.github.io/jabo-micro-game-engine/">Jabo Micro Game Engine</a> - lightweight and beginner friendly micro game engine</li>
-		<li><a href="https://github.com/swashvirus/craters.js">Craters.js mini game framework</a> - simple to use hackable framework. compact at ~2kb zipped leaving enough room for the game logic</li>
+		<li><a href="https://github.com/swashvirus/craters.js">Craters.js mini game framework</a> - simple to use hackable framework, compact at ~2kb zipped leaving enough room for game logic</li>
 	</ul>
 
 	<h3 id="sfx">Sound and music</h3>
