Add summary of eBay Tech's kick-offs

--- a/index.html
+++ b/index.html
@@ -294,6 +294,7 @@
 		<li><a href="https://github.blog/2019-08-07-eighth-annual-js13kgames-challenge/">Eighth annual js13kGames challenge</a> by Lee Reilly on GitHub's blog</li>
 		<li class="posts" id="posts2019"><strong>2019 post-mortems:</strong>
 			<ul>
+				<li><a href="https://ebaytech.berlin/js13kgames-a-review-c10cbe9a39e3/">js13kGames — a review</a> by eBay Tech</li>
 				<li><a href="https://unboring.net/cases/progressive-webxr-game/">Making a Progressive WebXR game with 13Kb + three.js</a> by Arturo Paracuellos</li>
 				<li><a href="https://github.com/vonloxx/js13k-2019/blob/master/README.md">Back To The Stars</a> by Marco Fernandes</li>
 				<li><a href="https://auroriax.com/js13kgames-back-to-the-basics/">BackFlipped: Back to the Basics</a> by Tom Hermans (@Auroriax)</li>
