back on track (mania) making of

--- a/index.html
+++ b/index.html
@@ -300,6 +300,7 @@
 				<li><a href="https://github.com/vonloxx/js13k-2019/blob/master/README.md">Back To The Stars</a> by Marco Fernandes</li>
 				<li><a href="https://auroriax.com/js13kgames-back-to-the-basics/">BackFlipped: Back to the Basics</a> by Tom Hermans (@Auroriax)</li>
 				<li><a href="https://medium.com/@niklas.b3rg/game-dev-postmortem-backstabber-hero-part-1-80c7def92c74">Backstabber Hero (Part 1 - Sources of inspiration)</a> by Niklas Berg (@nkholski)</li>
+				<li><a href="http://xem.github.io/articles/js13k19.html">Back on Track (mania)</a> by xem</li>
 			</ul>
 		</li>
 	</ul>
