--- a/index.html
+++ b/index.html
@@ -301,6 +301,7 @@
 				<li><a href="https://auroriax.com/js13kgames-back-to-the-basics/">BackFlipped: Back to the Basics</a> by Tom Hermans (@Auroriax)</li>
 				<li><a href="https://medium.com/@niklas.b3rg/game-dev-postmortem-backstabber-hero-part-1-80c7def92c74">Backstabber Hero (Part 1 - Sources of inspiration)</a> by Niklas Berg (@nkholski)</li>
 				<li><a href="http://xem.github.io/articles/js13k19.html">Back on Track (mania)</a> by xem</li>
+				<li><a href="https://dev.to/mrlopis/how-to-design-a-javascript-game-in-13kb-or-less-59kn">How to design a javascript game? (in 13KB or less)</a> by Joao Lopes (@mrlopis)</li>
 			</ul>
 		</li>
 	</ul>
