Adds Back from Kooky Island postmortem

--- a/index.html
+++ b/index.html
@@ -303,6 +303,7 @@
 				<li><a href="http://xem.github.io/articles/js13k19.html">Back on Track (mania)</a> by xem</li>
 				<li><a href="https://dev.to/mrlopis/how-to-design-a-javascript-game-in-13kb-or-less-59kn">How to design a javascript game? (in 13KB or less)</a> by Joao Lopes (@mrlopis)</li>
 				<li><a href="https://github.com/DennisBengs/retrohaunt/tree/master/postmortem">Retrohaunt</a> by Donitz</li>
+				<li><a href="https://medium.com/@alexc73/i-made-a-video-game-on-my-journey-to-work-8e1bf2dfd208">Back from Kooky Island</a> by Alexander Curtis</li>
 			</ul>
 		</li>
 	</ul>
