--- a/index.html
+++ b/index.html
@@ -305,6 +305,7 @@
 				<li><a href="https://github.com/DennisBengs/retrohaunt/tree/master/postmortem">Retrohaunt</a> by Donitz</li>
 				<li><a href="https://medium.com/@alexc73/i-made-a-video-game-on-my-journey-to-work-8e1bf2dfd208">Back from Kooky Island</a> by Alexander Curtis</li>
 				<li><a href="https://dev.to/mrlopis/creating-a-13kb-js-game-using-svg-5fjk">Creating a 13KB JS Game using SVG</a> by Joao Lopes (@mrlopis)</li>
+				<li><a href="https://medium.com/@etchells.kevin/js13k-games-2019-entry-get-back-from-robot-city-22a48afe5fe">Get Back From Robot City</a> by Kev Etchells</li>
 			</ul>
 		</li>
 	</ul>
