--- a/index.html
+++ b/index.html
@@ -315,6 +315,7 @@
 				<li><a href="https://dev.to/johnkilmister/random-learnings-from-entering-js13k-games-2019-4pcn">Random Learnings from Entering JS13K Games 2019</a> by <a href="https://twitter.com/JohnKilmister">@JohnKilmister</a></li>
 				<li><a href="https://64mega.github.io/js13k-2019-recap.html">JS13k 2019 Developer Commentary</a> by Daniel Lawrence (<a href="https://twitter.com/64Mega">@64Mega</a>)</li>
 				<li><a href="https://dev.to/salvan13/backshot-tactics-a-multiplayer-game-for-js13kgames-47ie">Backshot Tactics - A Multiplayer Game for js13kGames</a> by Antonio Salvati (<a href="https://twitter.com/salvan13">@salvan13</a>)</li>
+				<li><a href="https://medium.com/@mateusz.tomczyk/a-story-of-making-a-13-kb-game-in-30-days-the-wandering-wraith-post-mortem-9847c8992f49">A story of making a 13 kB game in 30 days. “The Wandering Wraith” post mortem.</a> by Mateusz Tomczyk</li>
 			</ul>
 		</li>
 	</ul>
