--- a/index.html
+++ b/index.html
@@ -309,6 +309,7 @@
 		<li><a href="https://github.blog/2019-08-07-eighth-annual-js13kgames-challenge/">Eighth annual js13kGames challenge</a> by Lee Reilly on GitHub's blog</li>
 		<li><a href="https://ebaytech.berlin/js13kgames-a-review-c10cbe9a39e3/">js13kGames — a review</a> by eBay Tech</li>
 		<li><a href="https://www.vice.com/en_us/article/43k453/this-real-time-strategy-game-is-just-13-kilobytes">This Real Time Strategy Game Is Just 13 Kilobytes</a> by Karl Bode at Vice Games</li>
+		<li><a href="https://github.blog/2019-10-08-js13k-2019-highlights/">Highlights from the js13kGames 2019 competition</a> - top 10 winners showcased by Lee Reilly on GitHub's blog</li>
 		<li class="posts" id="posts2019"><strong>2019 post-mortems:</strong>
 			<ul>
 				<li><a href="https://unboring.net/cases/progressive-webxr-game/">Making a Progressive WebXR game with 13Kb + three.js</a> by Arturo Paracuellos</li>
