--- a/index.html
+++ b/index.html
@@ -335,6 +335,7 @@
 				<li><a href="https://medium.com/@mateusz.tomczyk/a-story-of-making-a-13-kb-game-in-30-days-the-wandering-wraith-post-mortem-9847c8992f49">A story of making a 13 kB game in 30 days. “The Wandering Wraith” post mortem.</a> by Mateusz Tomczyk</li>
 				<li><a href="https://serpent7776.itch.io/back-to-life/devlog/100709/back-to-life-postmortem">Back to life</a> by <a href="https://twitter.com/serpent7776">Serpent7776</a></li>
 				<li><a href="https://medium.com/@herebefrogs/dont-look-back-a-js13kgames-2019-postmortem-a0028d8acef2">Do Not Look Back!</a> by <a href="https://twitter.com/herebefrogs">Jerome Lecomte</a></li>
+			        <li><a href="https://www.deadpix3l.com/bubbas-back-room-postmortem">Bubba's Back Room</a> by <a href="https://twitter.com/ericdrowell">Eric Rowell</a></li>
 			</ul>
 		</li>
 	</ul>
