--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
 		<li><a href="http://canvas-txt.geongeorge.com/">Canvas-Txt</a> - The better way to print multiline text on HTML5 canvas with auto line breaks and alignments (<a href="https://github.com/geongeorge/Canvas-Txt">source code</a>)</li>
 		<li><a href="https://spritestack.io/">SpriteStack</a> - SpriteStack is a voxel editor suited for 2D artists featuring hand crafted retro renderer with animation support. It exports spritesheets, slices and vox models.</li>
 		<li><a href="https://github.com/darkwebdev/tinyfont.js">tinyfont.js</a> - Tiniest possible pixel font for your JS games (<700b zipped)!</li>
+		<li><a href="https://xem.github.io/emoji/">emoji</a> - a webfont that can be loaded from your entry to fix/complete the emoji that can be seen by all your future players</li>
 	</ul>
 
 	<h3 id="mini">Minification</h3>
