--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
 		<li><a href="https://github.com/xem/miniMusic">miniMusic</a> - draw a melody with your mouse, choose the tempo, volume and base note, then export it as a super short JS code</li>
 		<li><a href="https://www.google.com/logos/2017/fischinger/fischinger17.html">Google Music Creator</a> - a simple music creator by Google</li>
 		<li><a href="https://zzfx.3d2k.com">ZzFX</a> - Zuper Zmall Zeeded Zound Zynth</li>
+		<li><a href="https://keithclark.github.io/ZzFXM/">ZzFXM</a> - A tiny JavaScript music renderer for ZzFX</li>
 	</ul>
 
 	<h3 id="gfx">Artwork and fonts</h3>
