Adding link to 2020 and Jupi Plays link for 2019

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 	<nav>
 		<a href="https://js13kgames.com">js13kGames</a>
 		<ul>
+			<li><a href="https://2020.js13kgames.com">2020</a></li>
 			<li><a href="https://2019.js13kgames.com">2019</a></li>
 			<li><a href="https://2018.js13kgames.com">2018</a></li>
 			<li><a href="https://2017.js13kgames.com">2017</a></li>
@@ -199,6 +200,7 @@
 		<li><a href="https://soundcloud.com/the-game-developers-radio/game-design-daily-068-game-dev-article-round-up-part-02">The Game Developers Radio: Game Design Daily 068</a> - game dev article round up part 02 on SoundCloud</li>
 		<li><a href="https://www.youtube.com/watch?v=RdOram609vU">How to squeeze a HTML5 game in 13 kB?</a> - Andrzej Mazur's introductory speech. Subtitles by B0dz1o</li>
 		<li><a href="https://edgeguard.podbean.com/e/111-js13k/">Edge Guard podcast #111 about js13kGames 2019</a></li>
+		<li><a href="https://www.youtube.com/playlist?list=PLYKU1lvSF85cuGNo8x74zv6U1ojTYjzRh">Jupi Plays Indie Games 2019</a> - YouTube playlist for 2019 entries by Jupiter Hadley</li>
 	</ul>
 
 	<h3 id="posts">Blog posts and post mortems</h3>
