add gamejam-boilerplate and 'how to master screen orientation' article

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 		<li><a href="https://github.com/voronianski-on-games/js13kGames-boilerplate">js13kGames-boilerplate</a> - includes game loop, utility functions and webpack config to package game with just one command</li>
 		<li><a href="https://github.com/sz-piotr/js13k-webpack-starter">js13k-webpack-starter</a> - build with a single command, dev server, es2015 support</li>
 		<li><a href="https://github.com/aerze/js13k-base">js13k-base</a> - simple commands, a server, and a sample game + framework</li>
-		<li><a href="https://github.com/mtmckenna/js13k-webpack-typescript-starter-party">js13k-webpack-typescript-starter-party</a> - starter Webpack project to transpile TypeScript, build, and zip your game<li>
+		<li><a href="https://github.com/mtmckenna/js13k-webpack-typescript-starter-party">js13k-webpack-typescript-starter-party</a> - starter Webpack project to transpile TypeScript, build, and zip your game</li>
 		<li><a href="https://github.com/mtmckenna/js13kgames-parcel-starter">js13kgames-parcel-starter</a> - starter repo to build, zip, and check the file size of your game with a single command</li>
 		<li><a href="https://github.com/xem/responsiveTouchGameFramework">responsiveTouchGameFramework</a> - responsive canvas game framework with unified mouse / tactile inputs</li>
 		<li><a href="https://twitter.com/MaximeEuziere/status/883044404453294080">Tweetwork</a> - a 140b canvas game framework</li>
@@ -83,6 +83,7 @@
 		<li><a href="https://jabo-bernardo.github.io/jabo-micro-game-engine/">Jabo Micro Game Engine</a> - lightweight and beginner friendly micro game engine</li>
 		<li><a href="https://github.com/swashvirus/craters.js">Craters.js mini game framework</a> - simple to use hackable framework, compact at ~2kb zipped leaving enough room for game logic</li>
 		<li><a href="https://twitter.com/MaximeEuziere/status/1257783623316656130">280 bytes responsive, hackable, mobile friendly game framework</a> with native arrow keys / WASD / ZQSD key inputs detection</li>
+    <li><a href="https://github.com/herebefrogs/gamejam-boilerplate">gamejam-boilerplate</a> - a small, extendable boilerplate for 2D canvas games with keyboard/mouse/touch support, live reload and build script to package the game as an optimized ZIP</li>
 	</ul>
 
 	<h3 id="sfx">Sound and music</h3>
@@ -187,6 +188,7 @@
 		<li><a href="https://craiky.github.io/tutorial/">Procedurally Generated Dungeon Tutorial</a></li>
 		<li><a href="http://7tonshark.com/2018-09-16-web-audio-part-1/">Creating simple music using the Web Audio API</a></li>
 		<li><a href="https://xem.github.io/articles/webgl-guide.html">WebGL guide</a></li>
+		<li><a href="https://www.creativebloq.com/web-design/master-screen-orientation-html5-101517371">How to master screen orientation with HTML5</a> - 6 technics to detect, react and control screen orientation on mobile devices</li>
 	</ul>
 
 	<h3 id="vids">Videos and audio</h3>
