--- a/index.html
+++ b/index.html
@@ -366,6 +366,7 @@
 				<li><a href="https://serpent7776.itch.io/find-the-theme/devlog/178196/find-the-theme-postmortem">Find the theme</a> - game made with OCaml - by <a href="https://twitter.com/serpent7776">@Serpent7776</a></li>
 				<li><a href="https://github.com/SalvatorePreviti/js13k-2020/wiki/Post-Mortem">Island Not Found</a> - a post mortem - by <a href="https://twitter.com/bencoder">Ben</a> and <a href="https://twitter.com/SN74HC00">Salvatore</a></li>
 				<li><a href="https://harmades.github.io/posts/js13k-2020-post-mortem/">404 BC Pinball</a> post-mortem by Adrian Lissot (<a href="https://twitter.com/adrianlissot">@adrianlissot</a>)</li>
+				<li><a href="https://www.radcade.com/building-a-pseudo-3d-racing-game-for-the-2020-js13k-game-jam/">Building a Pseudo-3D Racing Game for the 2020 JS13k Game Jam</a> by <a href="https://twitter.com/mattmckenna">@mattmckenna</a></li>
 			</ul>
 		</li>
 	</ul>
