--- a/index.html
+++ b/index.html
@@ -367,6 +367,7 @@
 				<li><a href="https://github.com/SalvatorePreviti/js13k-2020/wiki/Post-Mortem">Island Not Found</a> - a post mortem - by <a href="https://twitter.com/bencoder">Ben</a> and <a href="https://twitter.com/SN74HC00">Salvatore</a></li>
 				<li><a href="https://harmades.github.io/posts/js13k-2020-post-mortem/">404 BC Pinball</a> post-mortem by Adrian Lissot (<a href="https://twitter.com/adrianlissot">@adrianlissot</a>)</li>
 				<li><a href="https://www.radcade.com/building-a-pseudo-3d-racing-game-for-the-2020-js13k-game-jam/">Building a Pseudo-3D Racing Game for the 2020 JS13k Game Jam</a> by <a href="https://twitter.com/mattmckenna">@mattmckenna</a></li>
+				<li><a href="https://auroriax.com/edge-not-found-postmortem-js13k-2020/">Edge Not Found postmortem</a> - Sokoban puzzles on an endless grid - by Tom Hermans (<a href="https://twitter.com/auroriax">@Auroriax</a>)</li>
 			</ul>
 		</li>
 	</ul>
