--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
 		<li><a href="https://github.com/aframevr/awesome-aframe">Awesome A-Frame</a> - many more A-Frame resources &amp; examples</li>
 		<li><a href="https://github.com/xem/gyro">Gyro.js</a> - harmonizes the gyroscope/accelerometer output across all mobile devices</li>
 		<li><a href="https://github.com/mguinea/js13k-aframe-boilerplate">js13k A-Frame Webpack boilerplate</a> - build with a single command, dev server, es2015 support, basic example</li>
+		<li><a href="https://discord.gg/nApTSK6">WebXR Discord</a></li>
 	</ul>
 
 	<h3 id="other">Other tools</h3>
