Add making of FOURFOLD to resources page

--- a/index.html
+++ b/index.html
@@ -383,7 +383,8 @@
 				<li><a href="https://xem.github.io/articles/js13k20.html">The making of Track not found?!</a> by Xem</li>
 				<li><a href="https://piesku.com/roar/">The Making of ROAR</a> by <a href="https://twitter.com/stas">Staś Małolepszy</a></li>
 				<li><a href="https://keithclark.co.uk/articles/zzfxm/">The Making of ZzFXM</a> by <a href="https://twitter.com/keithclarkcouk">Keith Clark</a> &amp; <a href="https://twitter.com/KilledByAPixel">Frank Force</a></li>
-					
+				<li><a href="https://saud.gq/blog/fourfold/">The Making of FOURFOLD</a> by Saud</li>
+			
 			</ul>
 		</li>
 	</ul>
