Added post on using js_of_ocaml for js13k

--- a/index.html
+++ b/index.html
@@ -388,6 +388,7 @@
 			
 			</ul>
 		</li>
+		<li><a href="https://dev.to/serpent7776/using-jsofocaml-to-write-game-in-13k-for-js13k-game-jam-3653">Using js_of_ocaml to write game in 13k for js13k game jam</a> - by Serpent7776</li>
 	</ul>
 
 	<a class="fork page" href="https://github.com/js13kgames/resources" title="Fork me on GitHub"></a>
