--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>js13kGames Resources</title>
 	<meta name="author" content="end3r">	
 	<meta name="description" content="List of useful tools, materials, and tutorials for creating a js13kGames entry, and post-mortems from already created games." />
-	<meta name="monetization" content="$coil.xrptipbot.com/-CgHpYu7SfeoDmHVugOfrw" />	
+	<meta name="monetization" content="$ilp.uphold.com/k4eJGQUDF9nw" />
 	<link rel="shortcut icon" href="favicon.png">
 	<link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Graduate" rel="stylesheet">
@@ -204,6 +204,8 @@
 		<li><a href="https://www.youtube.com/watch?v=RdOram609vU">How to squeeze a HTML5 game in 13 kB?</a> - Andrzej Mazur's introductory speech. Subtitles by B0dz1o</li>
 		<li><a href="https://edgeguard.podbean.com/e/111-js13k/">Edge Guard podcast #111 about js13kGames 2019</a></li>
 		<li><a href="https://www.youtube.com/playlist?list=PLYKU1lvSF85cuGNo8x74zv6U1ojTYjzRh">Jupi Plays Indie Games 2019</a> - YouTube playlist for 2019 entries by Jupiter Hadley</li>
+		<li><a href="https://cinnamon.video/watch?v=494735965722510880">js13kGames 2020: showcase of Web Monetization category entries</a> by Jupiter Hadley</li>
+		<li><a href="https://www.youtube.com/watch?v=GKOgm5-GbUA">20 award-winning 13-kilobyte JavaScript games - js13kGames 2020 winners</a> by Ania Kubów for freeCodeCamp</li>
 	</ul>
 
 	<h3 id="posts">Blog posts and post mortems</h3>
