--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@
 		<li><a href="https://github.com/xem/3D-level-editor">3D-level-editor</a> - CSS3D map editor with customizable 3D shapes and 2D sprites</li>
 		<li><a href="https://github.com/xenohunter/timestore">timestore</a> - library to manage multiple timers inside separate contexts</li>
 		<li><a href="https://github.com/stasm/innerself">innerself</a> - a React/Redux-like view and state management for your game's UI, in less than 400 bytes</li>
+		<li><a href="https://gitlab.com/-/snippets/1853886">Element Simple Builder</a> - a small lib to create and update complex DOM from JS, with SVG support</li>
 	</ul>
 
 	<h3 id="tuts">Tutorials</h3>
