Add postmortem for Exit (2020 entry)

--- a/index.html
+++ b/index.html
@@ -409,6 +409,7 @@
 				<li><a href="https://saud.gq/blog/fourfold/">The Making of FOURFOLD</a> by Saud</li>
 				<li><a href="https://medium.com/@herebefrogs/highway-404-a-js13kgames-2020-post-mortem-89f94dedef03">Highway 404</a> - a post-mortem by Jerome Lecomte (<a href="https://twitter.com/herebefrogs">@herebefrogs</a>)</li>
 				<li><a href="https://dev.to/serpent7776/using-jsofocaml-to-write-game-in-13k-for-js13k-game-jam-3653">Using js_of_ocaml to write game in 13k for js13k game jam</a> - by Serpent7776</li>
+				<li><a href="https://github.com/jaammees/exit">Exit postmortem</a> (webxr category) - by <a href="https://twitter.com/uniquename654">James</a></li>
 			</ul>
 		</li>
 		<li class="posts" id="posts2021"><strong>2021 post-mortems:</strong>
