--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
 		<li><a href="https://spritestack.io/">SpriteStack</a> - voxel editor for 2D artists with retro renderer &amp; animation support. Exports spritesheets, slices &amp; vox models</li>
 		<li><a href="https://github.com/darkwebdev/tinyfont.js">tinyfont.js</a> - Tiniest possible pixel font for your JS games (<700b zipped)!</li>
 		<li><a href="https://quinten.github.io/RLE-sprite-editor/">RLE sprite editor</a> - Editor and converter for Run Length Encoded sprites. Make tiny pixel art sprites in a text format.</li>
+		<li><a href="https://codepen.io/collection/DRMKdB">PetitePatterns</a> - A collection of micro (1/2kb) repeating SVG patterns</li>
 		<li><a href="https://xem.github.io/miniSVGcreator/">Mini SVG Creator</a> - Create tiny SVG images with a mouse and keyboard (ellipses, rectangles, paths with lines, curves, arcs...)</li>
 		<li><a href="https://codepen.io/xem/pen/OoXpmM?editors=1000">SVGenerator</a> - a dynamic SVG generator with custom colors</li>
 		<li><a href="https://https://xem.github.io/CSSprite/">CSSprite</a> - Gather many images/icons into a single PNG file to save hundreds of bytes</li>
