--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
 		<li><a href="https://xem.github.io/alphabet-piano/">Alphabet-piano</a> - Melody from an ASCII string
 		<li><a href="https://xem.github.io/MiniSoundEditor/">Mini Sound Editor</a> - Sound effects editor and tiny JS player, plus a list of examples
 		<li><a href="https://github.com/xem/GameAudioBundleMP3">Game Audio Bundle</a> - Free Sound effects compressed in .mp3 (there's a folder with all that are &lt; 13kb)
+		<li><a href="xem.github.io/midi2array/">midi2array</a> - parse/extract notes from a MIDI file
 	</ul>
 
 	<h3 id="gfx">Artwork and fonts</h3>
@@ -135,7 +136,7 @@
 		<li><a href="https://xem.github.io/unicode13/shapes-js.html">Unicode13/shapes</a> - a list of all the shapes and emoji present in Unicode 13 (warning, some of them aren't available on all OS's)</li>
 		<li><a href="https://xem.github.io/unicode13/emoji.html">Unicode13/emoji</a> - emoji polyfill (allowed in JS13kGames entries!) to add consistent support for Unicode 13 Emoji across OS's</li>
 		<li><a href="https://github.com/xem/js13k-path">js13k-path</a> - A super short polygon editor and drawer (each new point is encoded on 1 ASCII char)</li>
-		<li><a href="https://xem.github.io/miniPixelFont/">Mini pixel font</a> - Generate a pixel-art font with a few lines of JS</li>
+		<li><a href="https://xem.github.io/miniPixelFont/js13k.html">Mini pixel font</a> - Generate a pixel-art font with a few lines of JS</li>
 		<li><a href="https://xem.github.io/projects/raycast.html">Raycasting</a> - Render a 3D scene on a 2D canvas from a 2D grid using column-based raycasting</li>
 	</ul>
 
