--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 	<nav>
 		<a href="https://js13kgames.com">js13kGames</a>
 		<ul>
+			<li><a href="https://js13kgames.com">2021</a></li>
 			<li><a href="https://2020.js13kgames.com">2020</a></li>
 			<li><a href="https://2019.js13kgames.com">2019</a></li>
 			<li><a href="https://2018.js13kgames.com">2018</a></li>
@@ -102,11 +103,11 @@
 		<li><a href="https://keithclark.github.io/ZzFXM/">ZzFXM</a> - A tiny JavaScript music renderer for ZzFX</li>
 		<li><a href="https://xem.github.io/miniMusic">Mini Music</a> - draw a melody with your mouse, choose the tempo, volume and base note, then export it as a super short JS code</li>
 		<li><a href="https://xem.github.io/miniOrchestra/ ">Mini Orchestra</a> - same, with more options and many instruments at once</li>
-		<li><a href="https://xem.github.io/js1k19/miniSynth/">Mini Synth</a> - 1kb piano/guitar synth
-		<li><a href="https://xem.github.io/alphabet-piano/">Alphabet-piano</a> - Melody from an ASCII string
-		<li><a href="https://xem.github.io/MiniSoundEditor/">Mini Sound Editor</a> - Sound effects editor and tiny JS player, plus a list of examples
-		<li><a href="https://github.com/xem/GameAudioBundleMP3">Game Audio Bundle</a> - Free Sound effects compressed in .mp3 (there's a folder with all that are &lt; 13kb)
-		<li><a href="xem.github.io/midi2array/">midi2array</a> - parse/extract notes from a MIDI file
+		<li><a href="https://xem.github.io/js1k19/miniSynth/">Mini Synth</a> - 1kb piano/guitar synth</li>
+		<li><a href="https://xem.github.io/alphabet-piano/">Alphabet-piano</a> - Melody from an ASCII string</li>
+		<li><a href="https://xem.github.io/MiniSoundEditor/">Mini Sound Editor</a> - Sound effects editor and tiny JS player, plus a list of examples</li>
+		<li><a href="https://github.com/xem/GameAudioBundleMP3">Game Audio Bundle</a> - Free Sound effects compressed in .mp3 (there's a folder with all that are &lt; 13kb)</li>
+		<li><a href="https://xem.github.io/midi2array/">midi2array</a> - parse/extract notes from a MIDI file</li>
 	</ul>
 
 	<h3 id="gfx">Artwork and fonts</h3>
@@ -430,7 +431,7 @@
 
 <footer>
 	<div>
-		&copy; js13kGames 2012-2020
+		&copy; js13kGames 2012-2021
 		<p>Created and maintained by <a target="_blank" href="https://end3r.com">Andrzej Mazur</a> from <a target="_blank" href="https://enclavegames.com">Enclave Games</a>.</p>
 	</div>
 </footer>
